InternexDev_Sandbox/src/objects/Web_Cash__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Account.akritiv__Account_Key__c</field>
                <operation>notEqual</operation>
                <value>Write off Account Key</value>
            </filterItems>
            <filterItems>
                <field>Account.akritiv__Account_Key__c</field>
                <operation>notEqual</operation>
                <value>TDS - Acc - 001</value>
            </filterItems>
            <filterItems>
                <field>Account.akritiv__Account_Key__c</field>
                <operation>notEqual</operation>
                <value>Write Back Account Key</value>
            </filterItems>
            <filterItems>
                <field>Account.akritiv__Account_Key__c</field>
                <operation>notEqual</operation>
                <value>Small Amount write off Account Key</value>
            </filterItems>
            <filterItems>
                <field>Account.akritiv__Account_Key__c</field>
                <operation>notEqual</operation>
                <value>LD Write Off Account Key</value>
            </filterItems>
            <filterItems>
                <field>Account.akritiv__Account_Key__c</field>
                <operation>notEqual</operation>
                <value>Bank Charges Write Off Account Key</value>
            </filterItems>
            <filterItems>
                <field>Account.akritiv__Account_Key__c</field>
                <operation>notEqual</operation>
                <value>Bad Debt Write Off Account Key</value>
            </filterItems>
            <filterItems>
                <field>Account.akritiv__Account_Key__c</field>
                <operation>notEqual</operation>
                <value>Adjusted Against AP Account Key</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Web Cash</relationshipLabel>
        <relationshipName>Web_Cash</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BRTN__c</fullName>
        <label>BRTN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Account_Id__c</fullName>
        <label>Bank Account Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Account_Name__c</fullName>
        <label>Bank Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Account__c</fullName>
        <label>Bank Account#</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Id__c</fullName>
        <label>Bank Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Name__c</fullName>
        <label>Bank Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Batch_Number__c</fullName>
        <label>Batch#</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Check__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup object for Cheque</description>
        <label>Check</label>
        <referenceTo>Cheque__c</referenceTo>
        <relationshipLabel>Web Cash</relationshipLabel>
        <relationshipName>Web_Cash</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cheque_Due_Date__c</fullName>
        <label>Cheque Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cheque_Received_Date__c</fullName>
        <label>Cheque Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cheque__c</fullName>
        <label>Cheque#</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <label>Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Number__c</fullName>
        <label>Company Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Bank_Account_No__c</fullName>
        <label>Customer Bank Account #</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DD_Account__c</fullName>
        <label>DD Account #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deposit_Date__c</fullName>
        <label>Deposit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grey_Out_Field__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to grey out fields in Web Cash Batches</description>
        <label>Grey Out Field</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsApplied__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsApplied</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsSavedFromScreen__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsSavedFromScreen</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsSelectedInvoice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsSelectedInvoice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Item_Number__c</fullName>
        <label>Item Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Type__c</fullName>
        <label>Item Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lockbox_Number__c</fullName>
        <label>Lockbox Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lockbox_Site__c</fullName>
        <label>Lockbox Site</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Non_AR_GL__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Non AR GL</label>
        <referenceTo>GL_Object__c</referenceTo>
        <relationshipLabel>Web Cash</relationshipLabel>
        <relationshipName>Web_Cash</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_Description_BRCR__c</fullName>
        <label>Payment Description/ BRCR</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Mode__c</fullName>
        <label>Payment Mode</label>
        <picklist>
            <picklistValues>
                <fullName>CHEQUE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NEFT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RTGS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NEFT/RTGS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OTHER</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Payment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Payment lookup on web cash to show link to payment</description>
        <label>Payment</label>
        <referenceTo>akritiv__Payment__c</referenceTo>
        <relationshipLabel>Web Cash</relationshipLabel>
        <relationshipName>Web_Cash</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Posting_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Document Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Process_Date__c</fullName>
        <label>Process Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <picklist>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash in Transit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment To Wrong Lock Box/ Entity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advance Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reviewed Credit with Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Overpayment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AML Investigation/ Workflow Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refund Requested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UnAllocated Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Already Applied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cheque Bounce</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Remitter_Name__c</fullName>
        <label>Remitter Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Selected_Amount__c</fullName>
        <label>Selected Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>All</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Processed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Processed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Save</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Submit_To_External_Source__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field is populated via workflow created on payment</description>
        <label>Submit To External Source</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Transaction_Code__c</fullName>
        <label>Transaction Code</label>
        <picklist>
            <picklistValues>
                <fullName>Applied On Invoice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partially Paid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unapplied Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unidentified Payment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Transaction_Date__c</fullName>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Transit_Routing__c</fullName>
        <label>Transit Routing #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Code__c</fullName>
        <label>User Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value_Date__c</fullName>
        <label>Value Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WebCash_Unique_Key__c</fullName>
        <label>WebCash Unique Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isAutoApplied__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isAutoApplied</label>
        <type>Checkbox</type>
    </fields>
    <label>Web Cash</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Batch_Number__c</columns>
        <columns>Check__c</columns>
        <columns>Cheque__c</columns>
        <columns>Amount__c</columns>
        <columns>Lockbox_Number__c</columns>
        <columns>Transit_Routing__c</columns>
        <columns>DD_Account__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Company_Number__c</columns>
        <columns>Deposit_Date__c</columns>
        <columns>Item_Number__c</columns>
        <columns>Lockbox_Site__c</columns>
        <columns>Remitter_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>WEB-{00000}</displayFormat>
        <label>Web Cash Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Web Cash</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>